--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ mlflow-skinny==2.19.0
 mysql-connector-python==9.2.0
 mysqlclient==2.2.7
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==2.2.2
 opentelemetry-api==1.29.0
 opentelemetry-sdk==1.29.0
